--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "firebase": "^8.6.3",
     "ngx-markdown": "^12.0.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
@@ -41,20 +42,29 @@
   "devDependencies": {
     "@angular-builders/jest": "^12.0.0",
     "@angular-devkit/build-angular": "^12.0.1",
+    "@angular-eslint/builder": "12.1.0",
+    "@angular-eslint/eslint-plugin": "12.1.0",
+    "@angular-eslint/eslint-plugin-template": "12.1.0",
+    "@angular-eslint/schematics": "12.1.0",
+    "@angular-eslint/template-parser": "12.1.0",
     "@angular/cli": "^12.0.1",
     "@angular/compiler-cli": "^12.0.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.9",
     "@types/jest": "^26.0.23",
     "@types/node": "^12.20.13",
-    "codelyzer": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "4.23.0",
+    "@typescript-eslint/parser": "4.23.0",
+    "eslint": "^7.26.0",
+    "eslint-plugin-import": "latest",
+    "eslint-plugin-jsdoc": "latest",
+    "eslint-plugin-prefer-arrow": "latest",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "jest": "^27.0.1",
     "jest-preset-angular": "^9.0.1",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "^6.1.3",
     "typescript": "^4.1.5"
   },
   "jest": {
