--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "set-env": "ts-node ./src/environments/setEnv.ts",
+    "set-env:prod": "ts-node ./src/environments/setEnv.ts --configuration production",
     "start": "ng serve",
     "build": "ng build",
-    "build-prod": "ng build --configuration production --aot",
+    "build:prod": "ng build --configuration production --aot",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:ci": "jest --runInBand",
@@ -55,6 +57,7 @@
     "@types/node": "^12.20.13",
     "@typescript-eslint/eslint-plugin": "4.23.0",
     "@typescript-eslint/parser": "4.23.0",
+    "dotenv": "^10.0.0",
     "eslint": "^7.26.0",
     "eslint-plugin-import": "latest",
     "eslint-plugin-jsdoc": "latest",
@@ -65,7 +68,8 @@
     "jest-preset-angular": "^9.0.1",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "yargs": "^17.0.1"
   },
   "jest": {
     "preset": "jest-preset-angular",
