--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "set-env": "ts-node ./src/environments/setEnv.ts",
     "set-env:prod": "ts-node ./src/environments/setEnv.ts --environment prod",
-    "start": "ng serve",
+    "start": "ng serve --configuration dev",
     "build": "ng build",
     "build:prod": "ng build --configuration production --aot",
     "test": "jest",
